[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quants"
version = "0.1.0"
description = "Package for Quant Trading"
authors = [{name = "Vinit Jain", email = "vinjain1011@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "plotly==5.18.0",
    "pandas_ta==0.3.14b0",
    "pandas==1.3.3",
    "pycoingecko",
    "python-binance",
    "schedule",
    "ta",
    "binance-connector",
    "matplotlib",
    "seaborn",
    "loguru",
    "pyyaml"  # Added for config file handling
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "mypy",
    "pre-commit",
    "coverage",
    "isort",
    "bumpversion",
    "pytest"
]

[project.scripts]
run_quants = "quants.main:main"

[tool.bumpversion]
allow_dirty = true
commit = false
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = [
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "src/quants/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.flake8]
max-line-length = 99
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "venv",
]

[tool.mypy]
ignore_missing_imports = true